fix(Rate): should enable flex wrap

--- a/src/rate/index.less
+++ b/src/rate/index.less
@@ -12,6 +12,7 @@
   display: inline-flex;
   cursor: pointer;
   user-select: none;
+  flex-wrap: wrap;
 
   &__item {
     position: relative;
